--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">Courseal</string>
+    <string name="learn_skills">Learn new skills by completing fun practice based lessons</string>
+    <string name="go_back">Go back</string>
+    <string name="logo">Logo</string>
+    <string name="get_started">Get started</string>
 </resources>
