--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,4 +4,7 @@
     <string name="go_back">Назад</string>
     <string name="logo">Логотип</string>
     <string name="get_started">Начать</string>
+    <string name="connecting_to">Вход на</string>
+    <string name="connection_failed">Соединение провалилось</string>
+    <string name="server_url">URL сервера</string>
 </resources>
