--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,4 +7,5 @@
     <string name="connecting_to">Вход на</string>
     <string name="connection_failed">Соединение провалилось</string>
     <string name="server_url">URL сервера</string>
+    <string name="loading">Загрузка...</string>
 </resources>
