--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="connecting_to">Connecting to</string>
     <string name="connection_failed">Connection failed</string>
     <string name="server_url">Server instance\'s URL</string>
+    <string name="loading">Loading...</string>
 </resources>
