--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="connection_failed">Connection failed</string>
     <string name="server_url">Server instance\'s URL</string>
     <string name="loading">Loading...</string>
+    <string name="confirm">Confirm</string>
+    <string name="connection_failed_detailed">The server is not responding. Check if the URL is corrrect</string>
 </resources>
