--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,14 @@
     <string name="loading">Loading...</string>
     <string name="confirm">Confirm</string>
     <string name="connection_failed_detailed">The server is not responding. Check if the URL is corrrect</string>
+    <string name="create_account">Create an account</string>
+    <string name="usertag">Unique usertag</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="show_password">Show password</string>
+    <string name="hide_password">Hide password</string>
+    <string name="register">Register</string>
+    <string name="already_have_account">I already have an account</string>
+    <string name="sign_in">Sign in</string>
+    <string name="login">Login</string>
 </resources>
