Allow users to add new accounts

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -31,4 +31,5 @@
     <string name="logged_in">Авторизован</string>
     <string name="not_logged_in">Не авторизован</string>
     <string name="delete_account">Удалить аккаунт</string>
+    <string name="add_account">Добавить новый аккаунт</string>
 </resources>
