--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="logged_in">Logged in</string>
     <string name="not_logged_in">Not logged in</string>
     <string name="delete_account">Delete account</string>
+    <string name="add_account">Add new account</string>
 </resources>
