--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="not_logged_in">Not logged in</string>
     <string name="delete_account">Delete account</string>
     <string name="add_account">Add new account</string>
+    <string name="empty_fields">Input fields cannot be empty</string>
 </resources>
