--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -38,4 +38,9 @@
     <string name="editor">Редактор</string>
     <string name="view_accounts">Посмотреть аккаунты</string>
     <string name="user_not_found">Пользователь не найден</string>
+    <string name="monday_short">Пн</string>
+    <string name="thursday_short">Чт</string>
+    <string name="sunday_short">Вс</string>
+    <string name="joined">Участник с</string>
+    <string name="xp_earned">Всего заработано XP:</string>
 </resources>
