Implement pretty lists with rounded corners

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -45,4 +45,5 @@
     <string name="xp_earned">Всего XP</string>
     <string name="courses">курсов</string>
     <string name="view_courses">Посмотреть курсы</string>
+    <string name="user_courses">Курсы %1$s</string>
 </resources>
