Add new course management endpoints

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -46,4 +46,5 @@
     <string name="courses">курсов</string>
     <string name="view_courses">Посмотреть курсы</string>
     <string name="user_courses">Курсы %1$s</string>
+    <string name="find_users">Найти других пользователей</string>
 </resources>
