--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -53,4 +53,8 @@
     <string name="change_profile_picture">Сменить фото</string>
     <string name="change_username">Сменить имя пользователя</string>
     <string name="change_password">Сменить пароль</string>
+    <string name="cancel">Отменить</string>
+    <string name="incorrect_password">Неправильный пароль</string>
+    <string name="old_password">Старый пароль</string>
+    <string name="new_password">Новый пароль</string>
 </resources>
