--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,8 @@
     <string name="incorrect_password">The password is incorrect</string>
     <string name="old_password">Old password</string>
     <string name="new_password">New password</string>
+    <string name="course_not_found">The course was not found</string>
+    <string name="enroll">Enroll</string>
+    <string name="already_enrolled">Already enrolled</string>
+    <string name="course_maintainers">Course\'s maintainers</string>
 </resources>
