--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="expand">Expand</string>
     <string name="your_courses">Your courses</string>
     <string name="no_permissions">No permissions</string>
+    <string name="create_course">Create a new course</string>
 </resources>
