--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,15 @@
     <string name="course_name">Course name</string>
     <string name="course_description">Course description</string>
     <string name="delete_course">Delete the course</string>
+    <string name="edit_task">Edit a task</string>
+    <string name="edit_lesson">Edit a lesson</string>
+    <string name="task_name">Task name</string>
+    <string name="lesson_name">Lesson name</string>
+    <string name="delete_task">Delete the task</string>
+    <string name="delete_lesson">Delete the lesson</string>
+    <string name="edit_task_body">Edit task body</string>
+    <string name="single_option">Single option</string>
+    <string name="multiple_option">Multiple option</string>
+    <string name="add_option">Add a new option</string>
+    <string name="delete_option">Delete the option</string>
 </resources>
