--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,5 @@
     <string name="edit_lecture_content">Edit lecture content</string>
     <string name="remove_task">Remove the task</string>
     <string name="add_task">Add a task</string>
+    <string name="remove_lesson">Remove the lesson</string>
 </resources>
