--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,6 @@
     <string name="remove_lesson">Remove the lesson</string>
     <string name="view_course">View course</string>
     <string name="find_courses">Find other courses</string>
+    <string name="want_to_leave">Are you sure you want to leave?</string>
+    <string name="progress_lost">Your progress will be lost</string>
 </resources>
